objects/ReAssignAccess__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>MGRODEMPID__c</fullName>
        <label>MGRODEMPID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MgrId__c</fullName>
        <label>MgrId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RPM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReAssignActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ReAssignActiive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USERODEMPID__c</fullName>
        <label>USERODEMPID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ReAssignAccess</label>
</CustomObject>